# N-Body-Molecular-Dynamics-MHPC-Project

./: .gitignore  CMakeLists.txt  README.md  main.c  run.sh
docs/: report.md
examples/: Makefile  argon_108.xyz  argon_2916.xyz
include/: cleanup.h  constants.h  force_compute.h  input.h  mdsys.h  output.h  simulate.h  utilities.h  verlet_time_integration.h
perf/: perf_stats_hybrid_108_ON.txt  perf_stats_hybrid_2916_ON.txt  perf_stats_hybrid_78732_ON.txt  perf_stats_mpi_108_ON.txt  perf_stats_mpi_2916_ON.txt  perf_stats_mpi_78732_ON.txt  perf_stats_omp_108_ON.txt  perf_stats_omp_2916_ON.txt  perf_stats_omp_78732_ON.txt  perf_stats_optimized_108_ON.txt  perf_stats_optimized_2916_ON.txt  perf_stats_optimized_78732_ON.txt  perf_stats_original_108_OFF.txt  perf_stats_original_108_ON.txt  perf_stats_original_2916_OFF.txt  perf_stats_original_2916_ON.txt  perf_stats_original_78732_OFF.txt  perf_stats_original_78732_ON.txt
src/: cleanup.c  constants.c  force_compute.c  input.c  output.c  simulate.c  utilities.c  verlet_time_integration.c
tests/: ljmd.h  perf_anal.sh  test_results.cpp  utils.c  verlet.c
timing/jobs/: hyb_job.sh  mpi_job.sh  omp_job.sh  opt_job.sh
timing/processed_data/: plot_comparison.gp  plot_speedup_hybrid.gp  plot_speedup_mpi.gp  plot_speedup_omp.gp  plot_time_atoms.gp  plot_time_hybrid.gp  plot_time_mpi.gp  plot_time_omp.gp
